[package]
name = "caesiumclt"
version = "0.16.0"
authors = ["Matteo Paonessa <matteo.paonessa@gmail.com>"]
edition = "2018"


[dependencies]
libc = "0.2"
structopt = "0.3"
indicatif = "0.16"
threadpool = "1.8"
walkdir = "2.3"
num_cpus = "1.13"
mime_guess = "2.0"
caesium = { git = "https://github.com/Lymphatus/libcaesium-rust.git" }